<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/baseLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <LinearLayout
        android:id="@+id/myLoader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/baseLayout"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:alpha="1"
        android:animateLayoutChanges="true"
        android:background="@drawable/loader_bg"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/pbProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/background_light"
            android:visibility="visible"></ProgressBar>

        <TextView
            android:id="@+id/loaderText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:paddingEnd="10sp"
            android:text="Signing you up.."
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/signUpLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="rootLayoutTapped"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/AppMainIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/SignUpFullName"
            android:inputType="textPersonName"
            android:onClick="textFldOnClickFunction"
            android:shadowColor="#D8DDE9"
            android:textColor="#183087"
            android:textColorHint="#8186B7" />

        <TextView
            android:id="@+id/nameHintTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="-10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:lines="1"
            android:singleLine="false"
            android:text="@string/nameHint"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="12sp"
            android:visibility="gone"
            tools:text="@string/nameHint" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/SignUpEmail"
            android:inputType="textEmailAddress"
            android:onClick="textFldOnClickFunction"
            android:shadowColor="#D8DDE9"
            android:textColor="#183087"
            android:textColorHint="#8186B7" />

        <TextView
            android:id="@+id/emailHintTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="-10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:lines="1"
            android:singleLine="false"
            android:text="@string/emailHint"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="12sp"
            android:visibility="gone"
            tools:text="@string/emailHint" />

        <EditText
            android:id="@+id/edtTextPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/SignUpPass"
            android:inputType="textPassword"
            android:onClick="textFldOnClickFunction"
            android:shadowColor="#D8DDE9"
            android:textColor="#183087"
            android:textColorHint="#8186B7" />

        <TextView
            android:id="@+id/passHintTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="-10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:lines="2"
            android:singleLine="false"
            android:text="@string/passHint"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="12sp"
            android:visibility="gone"
            tools:text="@string/passHint" />

        <Button
            android:id="@+id/btnSSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="#17CE10"
            android:text="@string/btnSSignUp"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"/>

        <Button
            android:id="@+id/btnSLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/holo_blue_dark"
            android:shadowColor="@android:color/background_dark"
            android:textSize="18sp"
            android:text="@string/btnSLogin"
            android:textColor="@android:color/background_light" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>