<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:id="@+id/myLLoader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/loginLinearLayout"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:alpha="1"
        android:animateLayoutChanges="true"
        android:background="@color/preLoaderBG"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/pbProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/preLoaderBG"
            android:visibility="visible"></ProgressBar>

        <TextView
            android:id="@+id/loaderTextL"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/preLoaderBG"
            android:gravity="start|center_vertical"
            android:paddingStart="10sp"
            android:text="Signing you up.."
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/loginLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="rootLayoutTapped"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/AppMainIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <EditText
            android:id="@+id/editTextLEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/SignUpEmail"
            android:inputType="textEmailAddress"
            android:shadowColor="#D8DDE9"
            android:text="yui@yui.yui"
            android:textColor="#183087"
            android:textColorHint="#8186B7" />

        <EditText
            android:id="@+id/edtTextLPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/SignUpPass"
            android:inputType="textPassword"
            android:shadowColor="#D8DDE9"
            android:text="yuiYui1"
            android:textColor="#183087"
            android:textColorHint="#8186B7" />

        <Button
            android:id="@+id/btnLLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/holo_blue_dark"
            android:shadowColor="@android:color/background_dark"
            android:text="@string/btnLLogin"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnLSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#0ACDDCEF"
            android:paddingStart="20sp"
            android:paddingEnd="20sp"
            android:singleLine="true"
            android:text="@string/btnLSignUp"
            android:textAlignment="center"

            android:textColor="#3768BD" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>